--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepare": "husky install",
     "lint": "stylelint **/*.scss",
     "lint:fix": "stylelint **/*.scss --fix",
-    "compile": "node-sass scss/main.scss -o css/ --output-style compressed"
+    "compile": "node-sass ./scss/main.scss -o ./css/ --output-style compressed && git add *.css"
   },
   "author": "kiosion",
   "license": "MIT",
